--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "v16.16.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
